--- a/src/bilo-ui.scss
+++ b/src/bilo-ui.scss
@@ -2,4 +2,5 @@
 @import './scss/forms.scss';
 @import './scss/layout.scss';
 @import './scss/loader.scss';
+@import './scss/mixins.scss';
 @import './scss/vars.scss';
