--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -73,12 +73,12 @@ $dim-panel: 24rem;
     top: 0;
 }
 
+$padding-card: 1em;
 .ws-card {
     position: relative;
-    margin: 0.5rem;
-    padding: 0.5rem;
-    width: calc(100% - 2rem);
-    // height: calc(100% - 2rem);
+    margin-bottom: 1em;
+    padding: $padding-card;
+    width: calc(100% - #{$padding-card});
     background: rgba(white, 0.05);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
