--- a/src/components/loader/styles/three-spin.scss
+++ b/src/components/loader/styles/three-spin.scss
@@ -44,7 +44,7 @@ body {
     bottom: 15px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: red;
+    border-top-color: #69DDFF;
     -webkit-animation: spin 1.5s linear infinite;
     animation: spin 1.5s linear infinite;
 }
