--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -78,7 +78,7 @@ $padding-card: 1em;
     position: relative;
     margin-bottom: 1em;
     padding: $padding-card;
-    width: calc(100% - #{$padding-card});
+    width: calc(100% - 2 * #{$padding-card});
     background: rgba(white, 0.05);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
