--- a/src/_demo/pages/style.scss
+++ b/src/_demo/pages/style.scss
@@ -25,7 +25,7 @@ $background: #333;
 
   &:hover {
     color: $col-active;
-    background-color: rgba($col-active,0.2);
+    // background-color: rgba($col-active,0.2);
     border-right: 2px solid $col-active;
   }
 }
