--- a/src/components/code-demo/style.scss
+++ b/src/components/code-demo/style.scss
@@ -1,6 +1,4 @@
-// @import '~highlight.js/styles/monokai.css';
-@import '~highlight.js/styles/atom-one-dark.css';
-// @import '~highlight.js/styles/vs2015.css';
+@import '~highlight.js/styles/vs2015.css';
 
 .code-demo {
     .toggle {
