--- a/src/components/code-demo/style.scss
+++ b/src/components/code-demo/style.scss
@@ -1,6 +1,7 @@
 @import '~highlight.js/styles/vs2015.css';
 
 .code-demo {
+    margin-bottom: 2em;
     .toggle {
       position: relative;
       float: right;
