--- a/src/components/app-body/style.scss
+++ b/src/components/app-body/style.scss
@@ -1,11 +1,12 @@
 @import '../../bilo-ui.scss';
 
 .app-body {
-    position: fixed;
-    top: $dim-navbar-height;
+    position: relative;
+    // top: $dim-navbar-height;
+    top: 0;
     left: 0;
     width: 100%;
-    height: calc(100vh - #{$dim-navbar-height});
+    height: calc(100% - #{$dim-navbar-height});
     overflow-y: auto;
     display: flex;
     flex-direction: row;
