--- a/src/components/app-sidenav/style.scss
+++ b/src/components/app-sidenav/style.scss
@@ -1,7 +1,7 @@
 @import '../../bilo-ui.scss';
 $dim-sidebar: 15em;
 .sidenav {
-    position: absolute;
+    position: relative;
     background: lighten($col-background, 0%);
     color: $col-text;
     width: 0;
@@ -16,6 +16,7 @@ $dim-sidebar: 15em;
     width: $dim-sidebar;
     background: lighten($col-background, 2%);
     color: $col-text;
+    height: 100%;
 }
 
 $padding: 1em;
