--- a/src/components/app-top-bar/style.scss
+++ b/src/components/app-top-bar/style.scss
@@ -4,7 +4,8 @@ $padding: 1rem;
 $height: calc(#{$dim-navbar-height} - 2 * #{$padding});
 .app-top-bar {
     @include box-shadow(0, 1px, 2px, rgba(0, 0, 0, 0.5));
-    position: fixed;
+    position: relative;
+    margin: 0;
     width: calc(100% - 2 * #{$padding});
     padding: $padding;
     top: 0;
