--- a/src/components/input/style.scss
+++ b/src/components/input/style.scss
@@ -16,7 +16,7 @@
   outline: none;
   border-bottom: 1px solid $col-lightgrey;
   border-radius: 4px;
-  
+  margin-bottom: 0.25em;
   &:hover {
       border-bottom: 1px solid $col-active;
   }
