--- a/src/components/loader/styles/three-spin.scss
+++ b/src/components/loader/styles/three-spin.scss
@@ -1,27 +1,33 @@
-body {
-//   background-color: #222;
+#preloader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
-// #preloader {
-//     position: relative;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-// }
+
+$dim-loader-size: 10rem;
 #loader {
     display: block;
     position: relative;
     left: 50%;
+    // top: calc(50% - #{$dim-loader-size}/ 2);
     top: 50%;
-    width: 150px;
-    height: 150px;
-    margin: -75px 0 0 -75px;
+    width: $dim-loader-size;
+    height: $dim-loader-size;
+    margin: {
+        top: calc(-1*#{$dim-loader-size}/2);
+        right: 0;
+        bottom: 0;
+        left: calc(-1*#{$dim-loader-size}/2);
+    }
     border-radius: 50%;
     border: 3px solid transparent;
     border-top-color: #00adee;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
 }
+
 #loader:before {
     content: "";
     position: absolute;
@@ -35,6 +41,7 @@ body {
     -webkit-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
 }
+
 #loader:after {
     content: "";
     position: absolute;
@@ -48,8 +55,9 @@ body {
     -webkit-animation: spin 1.5s linear infinite;
     animation: spin 1.5s linear infinite;
 }
+
 @-webkit-keyframes spin {
-    0%   {
+    0% {
         -webkit-transform: rotate(0deg);
         -ms-transform: rotate(0deg);
         transform: rotate(0deg);
@@ -60,8 +68,9 @@ body {
         transform: rotate(360deg);
     }
 }
+
 @keyframes spin {
-    0%   {
+    0% {
         -webkit-transform: rotate(0deg);
         -ms-transform: rotate(0deg);
         transform: rotate(0deg);
