--- a/src/components/app-topbar/style.scss
+++ b/src/components/app-topbar/style.scss
@@ -1,13 +1,16 @@
 @import '../../bilo-ui.scss';
 
 $padding: 1rem;
-$height: calc(#{$dim-navbar-height} - 2 * #{$padding});
+$height: $dim-navbar-height;
 .app-top-bar {
     @include box-shadow(0, 1px, 2px, rgba(0, 0, 0, 0.5));
     position: relative;
     margin: 0;
     width: calc(100% - 2 * #{$padding});
-    padding: $padding;
+    padding: {
+        left: $padding;
+        right: $padding;
+    }
     top: 0;
     left: 0;
     height: $height;
