--- a/src/components/code-docs/style.scss
+++ b/src/components/code-docs/style.scss
@@ -1,6 +1,6 @@
 @import '~highlight.js/styles/vs2015.css';
 
-.code-demo {
+.code-docs {
     margin-bottom: 2em;
     .toggle {
       position: relative;
