--- a/src/components/input/style.scss
+++ b/src/components/input/style.scss
@@ -2,20 +2,17 @@
 
 .input {
   position: relative;
-  width: calc(100% - 0em);
-  // padding: 1rem;
-  text-indent: 1em;
+  width: calc(100% - 1em);
+  padding: 0.5em;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
   background: rgba(grey, 0.1);
   color: $col-active;
   font-size: 1em;
   border: none;
   outline: none;
   border-bottom: 1px solid $col-lightgrey;
-  border-radius: 4px;
+  // border-radius: 4px;
   margin-bottom: 0.25em;
   &:hover {
       border-bottom: 1px solid $col-active;
