--- a/src/components/switch/style.scss
+++ b/src/components/switch/style.scss
@@ -3,6 +3,24 @@
 $col-active: #00adee;
 $dim-switch-width: 60px;
 $dim-switch-height: 26px;
+
+.switch-container {
+    $padding: 0.5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: calc(100% - 2 * #{$padding});
+    padding: $padding;
+    // margin-bottom: 0.5em;
+}
+
+.switch-title {
+    color: white;
+    &:hover {
+        color: rgba($col-active, 1)
+    }
+}
+
 .switch {
     position: relative;
     display: inline-block;
@@ -13,12 +31,16 @@ $dim-switch-height: 26px;
 
 /* Hide default HTML checkbox */
 
-.switch input {
+.switch-input {
     // display: none;
 }
 
-
 /* The slider */
+.checkbox {
+    background: rgba(white,0);
+    color: rgba(white,0);
+    display: none;
+}
 
 .slider {
     position: absolute;
@@ -46,11 +68,11 @@ $dim-slide-size: 20px;
 }
 
 input:checked+.slider {
-    background-color: rgba($col-active, 0.75);
+    background-color: rgba($col-active, 1);
 }
 
 input:focus+.slider {
-    box-shadow: 0 0 1px rgba($col-active, 0.75);
+    box-shadow: 0 0 1px rgba($col-active, 1);
 }
 
 input:checked+.slider:before {
