--- a/src/components/dropdown/style.scss
+++ b/src/components/dropdown/style.scss
@@ -3,37 +3,35 @@
 $select-height: 2em;
 select {
   position: relative;
-  width: 100%;
-  -webkit-appearance: none; 
-  -moz-appearance: none;
-  appearance: none;       /* remove default arrow */
-  // background-image: url(...);   /* add custom arrow */
+  width: calc(100%);
+  padding-right: 2.5em;
+  
   height: $select-height;
   line-height: $select-height;
-  // text-indent: calc(#{$select-height} / 2);
-  // input style
   text-indent: 1em;
   overflow: hidden;
   text-overflow: ellipsis;
-  // padding-top: 1em;
-  // padding-bottom: 1em;
-  background: rgba(grey, 0.1);
   color: $col-active;
   font-size: 1em;
   border: none;
   outline: none;
   border-bottom: 1px solid $col-lightgrey;
   margin-bottom: 0.5em;
+
   &:hover {
       border-bottom: 1px solid $col-active;
   }
   &:focus {
       border-bottom: 2px solid $col-active;
   }
+  /* remove default arrow */
+  -webkit-appearance: none; 
+  -moz-appearance: none;
+  appearance: none;
+  /* add custom arrow */
   background:
     linear-gradient(45deg, transparent 50%, $col-active 50%),
     linear-gradient(135deg, $col-active 50%, transparent 50%);
-    // linear-gradient(to right, skyblue, skyblue);
   background-position:
     calc(100% - 1.2em) calc(1em), 
     calc(100% - 1.2em + 5px) calc(1em),
@@ -43,8 +41,10 @@ select {
     5px 5px,
     2.5em 2.5em;
   background-repeat: no-repeat;
-  background-color: rgba(white, 0.1);
+  background-color: rgba(grey, 0.1);
   border-radius: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .select-style {
