--- a/src/components/tabs/style.scss
+++ b/src/components/tabs/style.scss
@@ -11,7 +11,7 @@
       position: relative;
       cursor: pointer;
       &:hover {
-        @extend .tab-button-active;
+        color: #00adee;
       }
     }
 
