--- a/src/components/loader/style.scss
+++ b/src/components/loader/style.scss
@@ -1,3 +1,5 @@
 @import './styles/three-spin.scss';
 @import './styles/rainbow.scss';
 @import './styles/spinner.scss';
+@import './styles/ellipsis.scss';
+@import './styles/md-spin.scss';
