--- a/src/components/iframe/style.scss
+++ b/src/components/iframe/style.scss
@@ -6,3 +6,19 @@
   height: 100%;
   position: relative;
 }
+
+.iframe-container {
+  overflow: hidden;
+  padding-top: 56.25%;
+  position: relative;
+}
+
+.iframe-container iframe {
+  @extend .iframe;
+  border: 0;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
